fable/test/valid/data_14.f
      program prog
      data val /+.1/
      data num /-2/
      write(6, *) val, num
      end
