fable/test/syntax_error/bad_complex_literal_2.f
      program prog
      complex cnum
      data cnum /(1+3,2)/
      end
